--- a/templates/sample.html
+++ b/templates/sample.html
@@ -1,1 +1,56 @@
-//temp
+<link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
+<div class="extended-combat-hud">
+	<div class="actions-container has-actions actions-used" data-title="Main Actions">
+		<div class="action-element" style="background-image: url(https://cdn.streamelements.com/uploads/1a5fdeb0-9a35-45b9-a4a5-2662229304a5.png)">
+			<span class="action-element-title">Attact</span>
+      	</div>
+      	<div class="action-element-container">
+			<div class="action-element" style="background-image: url(https://cdn.streamelements.com/uploads/1a5fdeb0-9a35-45b9-a4a5-2662229304a5.png)">
+				<span class="action-element-title">disengage</span>
+      		</div>
+          	<div class="action-element" style="background-image: url(https://cdn.streamelements.com/uploads/1a5fdeb0-9a35-45b9-a4a5-2662229304a5.png)">
+				<span class="action-element-title">dodge</span>
+      		</div>
+      	</div>
+      	<div class="action-element" style="background-image: url(https://cdn.streamelements.com/uploads/1a5fdeb0-9a35-45b9-a4a5-2662229304a5.png)">
+			<span class="action-element-title">Cast Spell</span>
+      	</div>
+      	<div class="action-element" style="background-image: url(https://cdn.streamelements.com/uploads/1a5fdeb0-9a35-45b9-a4a5-2662229304a5.png)">
+			<span class="action-element-title">Use Power</span>
+      	</div>
+      	<div class="action-element" style="background-image: url(https://cdn.streamelements.com/uploads/1a5fdeb0-9a35-45b9-a4a5-2662229304a5.png)">
+			<span class="action-element-title">Ready</span>
+      	</div>
+      	<div class="action-element" style="background-image: url(https://cdn.streamelements.com/uploads/1a5fdeb0-9a35-45b9-a4a5-2662229304a5.png)">
+			<span class="action-element-title">Hide</span>
+      	</div>
+      	<div class="action-element-container">
+			<div class="action-element" style="background-image: url(https://cdn.streamelements.com/uploads/1a5fdeb0-9a35-45b9-a4a5-2662229304a5.png)">
+				<span class="action-element-title">dash</span>
+      		</div>
+          	<div class="action-element" style="background-image: url(https://cdn.streamelements.com/uploads/1a5fdeb0-9a35-45b9-a4a5-2662229304a5.png)">
+				<span class="action-element-title">shove</span>
+      		</div>
+      	</div>
+      	<div class="action-element has-count" data-item-count="3" style="background-image: url(https://cdn.streamelements.com/uploads/dcb630cd-1f3f-4c94-bd33-6008fe46e646.png)">
+			<span class="action-element-title">Use Item</span>
+      	</div>
+  	</div>
+  
+  
+  	<div class="actions-container" data-title="Reactions">
+      	<div class="action-element">
+			<span class="action-element-title">Testing1</span>
+      	</div>
+  	</div>
+  	<div class="actions-container" data-title="Bonus">
+      	<div class="action-element bonus-action">
+			<span class="action-element-title">Testing1</span>
+      	</div>
+    </div>
+  	<div class="actions-container" data-title="Pass">
+      	<div class="action-element end-turn">
+			<span class="action-element-title">End Turn</span>
+      	</div>
+  	</div>
+</div>
