--- a/templates/extendedCombatHud.html
+++ b/templates/extendedCombatHud.html
@@ -5,7 +5,7 @@
 			<span class="action-element-title">Attact</span>
       	</div>
       	<div class="action-element-container">
-			<div class="action-element" style="background-image: url(https://cdn.streamelements.com/uploads/1a5fdeb0-9a35-45b9-a4a5-2662229304a5.png)">
+			<div class="action-element" data-type="trigger" data-itemname="Disengage" style="background-image: url(https://cdn.streamelements.com/uploads/1a5fdeb0-9a35-45b9-a4a5-2662229304a5.png)">
 				<span class="action-element-title">disengage</span>
       		</div>
           	<div class="action-element" style="background-image: url(https://cdn.streamelements.com/uploads/1a5fdeb0-9a35-45b9-a4a5-2662229304a5.png)">
