--- a/templates/extendedCombatHud.html
+++ b/templates/extendedCombatHud.html
@@ -1,3 +1,4 @@
+<form id="{{id}}" class="{{classes}}" data-appid="{{appId}}" autocomplete="off"></form>
 <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
 <div class="extended-combat-hud">
 	<div class="actions-container has-actions actions-used" data-title="Main Actions">
@@ -5,7 +6,7 @@
 			<span class="action-element-title">Attact</span>
       	</div>
       	<div class="action-element-container">
-			<div class="action-element" data-type="trigger" data-itemname="Disengage" style="background-image: url(https://cdn.streamelements.com/uploads/1a5fdeb0-9a35-45b9-a4a5-2662229304a5.png)">
+			<div class="action-element" data-type="trigger" data-itemname="{{hudData.other.specialItemsNames.disengage}}" style="background-image: url(https://cdn.streamelements.com/uploads/1a5fdeb0-9a35-45b9-a4a5-2662229304a5.png)">
 				<span class="action-element-title">disengage</span>
       		</div>
           	<div class="action-element" style="background-image: url(https://cdn.streamelements.com/uploads/1a5fdeb0-9a35-45b9-a4a5-2662229304a5.png)">
@@ -54,3 +55,4 @@
       	</div>
   	</div>
 </div>
+</form>
