--- a/templates/extendedCombatHud.html
+++ b/templates/extendedCombatHud.html
@@ -3,11 +3,14 @@
 <div class="extended-combat-hud">
 	<div class="features-container is-spell show">
 		{{#each hudData.actions.spells}}
-		{{#each this}}
+		<div class="features-accordion">
+			<span class="feature-accordion-title">{{this.[0].labels.level}}</span>
+			{{#each this}}
 			<div class="feature-element" data-type="trigger" data-itemname="{{data.name}}" style="background-image: url({{data.img}})">
 				<span class="feature-element-title">{{data.name}}</span>
 			</div>
 			{{/each}}
+		</div>
 		{{/each}}
   	</div>
     <div class="features-container is-consumable">
