--- a/styles/ActionHUD.css
+++ b/styles/ActionHUD.css
@@ -14,7 +14,19 @@
   box-sizing: border-box;
 }
 
+@keyframes extendedCombatHUDLoadAnimation {
+	from {
+		bottom: -100%;
+		opacity: 0;
+	}
+	to {
+		bottom: 15px;
+		opacity: 1;
+	}
+}
+
 .extended-combat-hud {
+  animation: extendedCombatHUDLoadAnimation 0.3s ease-in 1;
   bottom: 15px;
   color: var(--theme-fore-color);
   display: flex;
@@ -164,11 +176,24 @@
     flex-wrap: wrap-reverse;
     width: 0px;
 	overflow: hidden;
-    padding-left: 52px;
+    padding-left: 53px;
     position: relative;
     margin-right: 15px;
 	min-height: 150px;
 	transition: all 0.3s ease-in-out;
+}
+.features-accordion:not(.show) {
+	width: 0px !important;
+}
+.features-accordion-content {
+	display: flex;
+    flex-wrap: inherit;
+    transform: scaleX(0);
+    transform-origin: left;
+    transition: transform 0.3s ease-in-out;
+}
+.features-accordion.show .features-accordion-content {
+    transform: scaleX(1);
 }
 .feature-accordion-title {
     align-items: center;
@@ -185,7 +210,7 @@
     width: 150px;
     position: absolute;
     bottom: 75px;
-    left: -23px;
+    left: -22px;
 }
 
 .feature-element {
@@ -193,7 +218,7 @@
     background-origin: content-box;
     background-size: cover;
     border: 1px solid var(--theme-border-color);
-    flex: 1 0 33.333333333%;
+    flex: 0 0 150px;
     height: 150px;
 	overflow: hidden;
     position: relative;
@@ -204,17 +229,11 @@
   align-items: center;
   backdrop-filter: blur(6px);
   background-color: rgb(0 0 0 / 30%);
-  border: 1px solid var(--theme-border-color);
+  border-top: 1px solid var(--theme-border-color);
   bottom: 0px;
   display: flex;
   justify-content: center;
   padding: 1rem 0.5rem;
   position: absolute;
   width: 100%;
-}
-.feature-element {
-	height: 0px;
-}
-.features-accordion.show .feature-element {
-	height: 150px;
 }
