--- a/styles/PortraitHUD.css
+++ b/styles/PortraitHUD.css
@@ -1,6 +1,57 @@
 /*CHARACTER PORTRAIT CONTAINER*/
+.portrait-hud {
+    align-items: start;
+    background: var(--ech-color) center no-repeat;
+    background-size: var(--ech-portrait-size);
+    border: 1px solid var(--ech-border-color);
+    backdrop-filter: blur(6px);
+    display: flex;
+    flex-direction: column;
+    min-height: 375px;
+    min-width: 375px;
+    padding: 1rem;
+    position: relative;
+    transition: all 0.3s ease-in-out;
+    
+    pointer-events: all;
+}
 
-/*Container for the actor informations, a separate box on the left side*/
-.character-container{
-    margin: 0px;
+.portrait-stat-block {
+    align-items: center;
+    backdrop-filter: blur(6px);
+    background-color: rgb(0 0 0 / 50%);
+    border: 1px solid var(--ech-border-color);
+    color: rgb(255, 255, 255);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-bottom: 15px;
+    padding: 1rem 0.5rem;
+    width: 100px;
+}
+.portrait-stat-block > span {
+    padding: 0.2rem 0rem;
+}
+.portrait-stat-block.player-details {
+    align-items: flex-start;
+    background-color: rgba(0 0 0 / 0.1);
+    background: linear-gradient(0deg, rgba(65,75,85,0.9) 0%, rgba(70,80,90,0.8) 50%, rgba(75,85,95,0) 100%);
+    backdrop-filter: blur(0px);
+    border-width: 0px;
+    bottom: 0px;
+    font-size: 1.5rem;
+    left: 0px;
+    margin-bottom: 0px;
+    margin-top: auto;
+    padding: 1rem;
+    position: absolute;
+    text-shadow: 0 0 black;
+    width: 100%;
+}
+.portrait-stat-block.player-details .player-detail {
+    font-size: 0.8rem;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    width: 100%;
+    white-space: nowrap;
 }
